[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Enemy/catenemys.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy/BossSM.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Enemy/BatBoss.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Enemy/Bossbat.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Enemy/Batgum.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Enemy/BossHealth.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.6528, 4.62151 )

[sub_resource type="CircleShape2D" id=2]
radius = 9.80911

[sub_resource type="Animation" id=3]
resource_name = "Hit"

[sub_resource type="Animation" id=4]
length = 4.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -15, 12 ), Vector2( -41, 0 ), Vector2( -30, -24 ), Vector2( 0, -30 ), Vector2( 30, -24 ), Vector2( 40, 0 ), Vector2( 30, 24 ), Vector2( 0, 30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 3, 2, 3, 2, 3, 2, 3, 2 ]
}

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 1, 1.3, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 2, 3, 2, 3, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4.88826, 1.2287 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4.15757, 5.26375 )

[node name="BatBoss" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
Max_Health = 24
speed = 1
batgum = ExtResource( 5 )
bossbat = ExtResource( 4 )
gum_time = 0.5

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.471682, 0.0786133 )
texture = ExtResource( 1 )
vframes = 4
hframes = 2
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 0.202049 )
shape = SubResource( 1 )

[node name="Detector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
modulate = Color( 0.368627, 0.992157, 0.435294, 1 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 3 )
anims/defend = SubResource( 4 )
anims/idel = SubResource( 5 )

[node name="BossSM" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.1, 0.1 )

[node name="HitZone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitZone"]
visible = false
position = Vector2( 0, -4.20676 )
shape = SubResource( 6 )

[node name="AttackZone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
visible = false
position = Vector2( 0, 1.56792 )
shape = SubResource( 7 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="StateTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 2.71403 )
rotation = 3.15959

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="EnemyHealth" parent="." instance=ExtResource( 6 )]
margin_left = -10.6247
margin_top = -12.4302
margin_right = -10.6247
margin_bottom = -12.4302
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
[connection signal="body_entered" from="HitZone" to="." method="_on_HitZone_body_entered"]
[connection signal="body_entered" from="AttackZone" to="." method="_on_AttackZone_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
